# OpenSilver

./: .gitignore  AUDIT_CHECKLIST.md  CHANGELOG.md  CONTRIBUTING.md  ECOSYSTEM_COORDINATION.md  KASBONDS_AUDIT.md  KIP_REFERENCE.md  LANGUAGE_DEEP_DIVE.md  LICENSE  NEXT_SESSION.md  PATTERN_MAPPING.md  PLAN.md  README.md  SECURITY.md  STATUS.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.github/: pull_request_template.md
benchmarks/: README.md
cli/: package.json  tsconfig.json
contracts/: README.md
docs/: COMPILER_STRATEGY.md  DEPLOY_GUIDE.md  PATTERNS.md
examples/: README.md
integrations/: package.json
mcp/: package.json
patches/: silverscript-opzkprecompile.patch
references/: silverscript-rfc-opzkprecompile.md
runtime-tests/: Cargo.toml
runtime-tests/tests/: common.rs  core_runtime.rs  kcc20_runtime.rs  zk_runtime.rs
scripts/: apply-silverscript-opzkprecompile-patch.sh  bootstrap-silverc.sh  generate-manifest-artifacts.mjs
sdk/: package.json  tsconfig.json
tests/: atomic-swap-htlc-compile.test.ts  cli.test.ts  compile-extract-materialize.test.ts  dead-man-switch-compile.test.ts  deploy-plan.test.ts  escrow-bilateral-compile.test.ts  escrow-milestone-compile.test.ts  freelance-payroll-compile.test.ts  generated-manifests.test.ts  kcc20-builder-integration.test.ts  kcc20-integrations.test.ts  kcc20-kaspa-wasm.test.ts  kcc20-rpc-integration.test.ts  kcc20-sdk.test.ts  manifest.test.ts  mcp.test.ts  multisig-compile.test.ts  ownable-compile.test.ts  social-recovery-compile.test.ts  streaming-payment-compile.test.ts  (+5 more)
(+123 files in other folders)
