[package]
name = "opensilver-runtime-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
silverscript-lang = { path = "../upstream/silverscript/silverscript-lang" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "tn12" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "tn12" }
kaspa-txscript-errors = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "tn12" }
blake2b_simd = "1.0.2"
secp256k1 = { version = "0.29.0", features = ["global-context", "rand-std", "serde"] }
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
